# buraq

./: .env.sample  .gitignore  Cargo.toml  README.md  devbox.json  docker-compose.yml
.codeium/windsurf/: mcp_config.json
.cursor/rules/: generic-rust-rules.mdc
.github/workflows/: rust.yml
.windsurf/rules/: generic-rust-rules.md
bruno/: Create Project.bru  Get Project.bru  Update Project.bru  bruno.json  package-lock.json  package.json
bruno/AccessToken/: Create AccessToken.bru  folder.bru
bruno/Environments/: Create Environments.bru  Get Environment.bru  folder.bru
bruno/Project/: Create Project.bru  Delete Project.bru  Get Project.bru  List Projects.bru  Update Project.bru
bruno/Projects/: Create Project.bru  Get Project.bru  List Projects.bru  Update Project.bru  folder.bru
docs/erd/: erd.mmd
migrations/: 20250608145357_create_service_account.sql  20250608152153_create_access_token.sql  20250608152336_create_environment.sql  20250608152411_create_project.sql  20250608152450_create_project_access.sql  20250608152535_create_project_scope.sql  20250608152614_create_server_key.sql  20250608152657_create_service_account_key.sql  20250608153324_add_foreign_key_constraints.sql
src/: config.rs  lib.rs  main.rs  test_utils.rs  types.rs
src/models/: access_token.rs  environment.rs  mod.rs  pagination.rs  project.rs  project_access.rs  project_scope.rs  server_key.rs  service_account.rs  service_account_key.rs  sort.rs
src/repositories/: access_token.rs  access_token_repository.rs  base.rs  environment.rs  environment_repository.rs  mod.rs  project.rs  project_access.rs  project_access_repository.rs  project_repository.rs  project_scope.rs  project_scope_repository.rs  server_key_repository.rs  service_account.rs  service_account_key.rs  service_account_key_repository.rs  service_account_repository.rs
src/routes/: access_token.rs  environment.rs  mod.rs  project.rs  project_access.rs  project_scope.rs  server_key.rs  service_account.rs  service_account_key.rs
src/serializers/: algorithm.rs  mod.rs  option_algorithm.rs
src/services/: access_token.rs  access_token_service.rs  environment_service.rs  mod.rs  project_access_service.rs  project_scope_service.rs  project_service.rs  server_key_service.rs  (+2 more)
tests/: test_config.rs
(+11 files in other folders)
