[package]
name = "buraq"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
dotenvy = { version = "0", features = ["clap"] }
env_logger = "0"
envy = "0"
futures = "0"
log = "0"
mongodb = { version = "3", features = ["sync"] }
rstest = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "signal"] }
async-trait = "0"
jsonwebtoken = "9"
rust-crypto = "0.2"
base64 = "0.22"
uuid = "1.17"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
mockall = "0"
temp-env = "0"
